src/styles/material/_login_material.sass
#login
  .header
    background: $primary-color
    h1
      color: $light-tertiary-color
    .tabs
      color: $light-tertiary-color
      font-weight: $medium
      cursor: pointer
  .body
    .button-container
      button
        border-radius: $default-border-radius
        border: none
        color: $light-tertiary-color
        background: $light-primary-color
      .text
        color: $dark-text-color
        .welcome
          span
            color: $light-primary-color
        .message
          color: $dark-tertiary-color
  .footer
    color: $primary-color
  .popup
    background: $dark-placeholder-text-color
    .popup-box
      background: $light-tertiary-color
      border-radius: $default-border-radius
      button
        background: $cas-color
        border: none
        border-radius: $default-border-radius
        color: $light-tertiary-color

